--- a/estilo.css
+++ b/estilo.css
@@ -4,21 +4,22 @@ body{
     font-size: large;
 }
 .carousel{
-    margin-bottom: 50%;
+    margin-bottom: 5%;
 }
 footer{
-    margin-top: 50px;
-    margin-bottom: 10px;
+    margin: 10px
 }
 .videoyt{
     margin: 10px;
+    align-items: center;
 }
 .video{
     align-items: center;
+    margin-bottom: 5%;
 }
 .videoyt:hover{
-    transform: scale(1.1, 1.1);
-    transition: all 1s;
+    transform: scale(1.01, 1.01);
+    transition: all 0.2s;
 }
 .logo{
     transition: all 0.2s;
