--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,6 @@
 body{
     background-color:#d8b0fd;
-    font-family:Verdana, Geneva, Tahoma, sans-serif
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: large;
 }
 .carousel{
