--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,21 +1,5 @@
-body {
-    background-color: #d8b0fd;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	font-size: large;
-}
-
-.videoyt {
-	margin: 10px;
-	align-items: center;
-    &:hover{
-        transform: scale(1.01, 1.01);
-	    transition: all 0.2s;
-    }
-}
-
-.carousel {
-	margin-bottom: 5%;
-}
+$cbc: #fff6f6;
+$bg: #d8b0fd;
 
 footer {
 	margin: 10px;
@@ -35,21 +19,8 @@ footer {
 	margin-bottom: 50px;
 }
 
-.carousel-caption {
-	color: black;
-	background-color: rgb(255, 246, 246);
-	font-size: medium;
-	size: 50%;
-}
 
-.card {
-	margin: 2px;
-	background-color: transparent;
-	transition: all 1s;
-	filter: grayscale(100%);
-	width: 100px;
-    &:hover {
-        transform: scale(1.02, 1.02);
-        filter: grayscale(0%);
-    }
-}
+@import "body";
+@import "card";
+@import "carousel";
+@import "videoyt";
