--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -18,8 +18,9 @@ footer {
 	margin-top: 20px;
 	margin-bottom: 50px;
 }
-
-
+@media screen and (max-width:400px){
+	
+}
 
 @import "body";
 @import "card";
