--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -19,7 +19,12 @@ footer {
 	margin-bottom: 50px;
 }
 @media screen and (max-width:400px){
-	
+	body{
+		background-color: black;
+	}
+	.videoyt{
+		align-items: center;
+	}
 }
 
 @import "body";
