--- a/scss/_videoyt.scss
+++ b/scss/_videoyt.scss
@@ -5,4 +5,7 @@
         transform: scale(1.01, 1.01);
 	    transition: all 0.2s;
     }
+    @media screen and (max-width:400px){
+        aspect-ratio: 4x3;
+    }
 }
