--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,44 +1,75 @@
 footer {
-  margin: 10px; }
+  margin: 10px;
+}
 
 .video {
-  align-items: center;
-  margin-bottom: 5%; }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 5%;
+}
 
 .logo {
-  transition: all 0.2s; }
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
 
 .info {
   margin-top: 20px;
-  margin-bottom: 50px; }
+  margin-bottom: 50px;
+}
 
 body {
   background-color: #d8b0fd;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: large; }
+  font-size: large;
+}
 
 .card {
   margin: 2px;
   background-color: transparent;
+  -webkit-transition: all 1s;
   transition: all 1s;
-  filter: grayscale(100%);
-  width: 100px; }
-  .card:hover {
-    transform: scale(1.02, 1.02);
-    filter: grayscale(0%); }
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  width: 100px;
+}
+
+.card:hover {
+  -webkit-transform: scale(1.02, 1.02);
+          transform: scale(1.02, 1.02);
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
+}
 
 .carousel {
-  margin-bottom: 5%; }
+  margin-bottom: 5%;
+}
 
 .carousel-caption {
   color: black;
   background-color: #fff6f6;
   font-size: medium;
-  size: 50%; }
+  size: 50%;
+}
 
 .videoyt {
   margin: 10px;
-  align-items: center; }
-  .videoyt:hover {
-    transform: scale(1.01, 1.01);
-    transition: all 0.2s; }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.videoyt:hover {
+  -webkit-transform: scale(1.01, 1.01);
+          transform: scale(1.01, 1.01);
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+@media screen and (max-width: 400px) {
+  .videoyt {
+    aspect-ratio: 4x3;
+  }
+}
+/*# sourceMappingURL=estilo.css.map */
