--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,12 +28,16 @@ body {
 .card {
   margin: 2px;
   background-color: transparent;
+  -webkit-transition: all 1s;
+  transition: all 1s;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
   width: 100px;
 }
 
 .card:hover {
+  -webkit-transform: scale(1.01, 1.01);
+          transform: scale(1.01, 1.01);
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
 }
