--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -2,9 +2,8 @@ body {
     background-color: $bg;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: large;
-	@media screen and (max-width:570px) {
-		align-items: center;
-		width:100%;
-		height:auto;
-	}
+    @media screen and (max-width:400px){
+        aspect-ratio: 4x3;
+        margin: auto;
+    }
 }
