--- a/scss/_videoyt.scss
+++ b/scss/_videoyt.scss
@@ -7,6 +7,7 @@
     }
     @media screen and (max-width:400px){
         aspect-ratio: 4x3;
-        margin: auto;
+        width: 100%;
+        height: fit-content;
     }
 }
