--- a/scss/_videoyt.scss
+++ b/scss/_videoyt.scss
@@ -7,7 +7,6 @@
     }
     @media screen and (max-width:400px){
         aspect-ratio: 4x3;
-        width: 100%;
-        height: fit-content;
+        margin: auto;
     }
 }
