--- a/css/estilo.css
+++ b/css/estilo.css
@@ -80,7 +80,9 @@ body {
 @media screen and (max-width: 400px) {
   .videoyt {
     aspect-ratio: 4x3;
-    margin: auto;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 /*# sourceMappingURL=estilo.css.map */
