--- a/scss/_videoyt.scss
+++ b/scss/_videoyt.scss
@@ -8,5 +8,6 @@
     @media screen and (max-width:400px){
         aspect-ratio: 4x3;
         align-items: center;
+        position: relative;
     }
 }
