--- a/css/estilo.css
+++ b/css/estilo.css
@@ -83,6 +83,7 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    position: relative;
   }
 }
 /*# sourceMappingURL=estilo.css.map */
