--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,6 +23,9 @@ body {
   background-color: #d8b0fd;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: large;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .card {
