--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -2,4 +2,9 @@ body {
     background-color: $bg;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: large;
+	@media screen and (max-width:400px){
+		text-align: center;
+		align-items: center;
+	}
+
 }
