--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -5,6 +5,9 @@ body {
 	@media screen and (max-width:400px){
 		text-align: center;
 		align-items: center;
+		.navbar navbar-expand-lg navbar-light bg-light{
+			margin: 100%;
+		}
 	}
 
 }
