--- a/scss/_textos.scss
+++ b/scss/_textos.scss
@@ -6,6 +6,7 @@
     .textonegro{
         @extend .textos;
         border: 5px #000000 solid;
+        color: #000000;
         background-color: antiquewhite;
     }
     .textorojo{
