--- a/scss/_comida.scss
+++ b/scss/_comida.scss
@@ -4,22 +4,28 @@ $bgtextovioleta: #8a2be2;
 $azul: #0000ff;
 $textos: #ffffff;
 
-@mixin cajas ($bgtextos){
+@mixin cajas ($bgtexto){
     background-color: $bgtextos;
     border-radius: 5px;
     padding: 1rem;
+    margin: 1rem;
     h2{
-        color: $azul
+        color: $azul;
     }
     p{
-        color: $textos
+        color: $textos;
     }
 }
 body{
     background-color: $azul;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
+header{
+    text-align: center;
+    padding-top: 2px;
+    color:aqua;
+    height: 2px;
+}
 .recetamousse{
     @include textos ($bgtextonegro)
 }
