--- a/css/estilo.css
+++ b/css/estilo.css
@@ -113,7 +113,7 @@ body {
 }
 
 body {
-  background-color: #0000ff;
+  background-color: #d8b0fd;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
