--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -18,10 +18,14 @@ footer {
 	margin-top: 20px;
 	margin-bottom: 50px;
 }
-.textop{
+.textop {
 	text-align: center;
 }
-
+.form{
+	margin: 70%;
+	margin-left: 5px;
+	margin-right: 5px;
+}
 
 
 @import "body";
