--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -25,12 +25,25 @@ footer {
 	margin-top: 10px;
 }
 .form{
-	margin: 50%;
-	width: 50%;
+	margin: 10px;
+	width: 80%;
+	margin-bottom: 50px;
+}
+.ciudad {
+	margin-top: 40px;
+	margin-bottom: 60px;
+}
+.confirm {
+	text-align: center;
+	margin-top: 50px;;
+}
+.data{
+	margin: 50px;
+}
+.data2 {
+	margin: 50px;
 }
 @import "body";
 @import "card";
 @import "carousel";
 @import "videoyt";
-@import "textos";
-@import "comida";
