--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -14,36 +14,9 @@ footer {
 	transition: all 0.2s;
 }
 
-.info {
-	margin-top: 20px;
-	margin-bottom: 50px;
-}
-.textop {
-	text-align: center;
-}
-.ciudad {
-	margin-top: 10px;
-}
-.form{
-	margin: 10px;
-	width: 80%;
-	margin-bottom: 50px;
-}
-.ciudad {
-	margin-top: 40px;
-	margin-bottom: 60px;
-}
-.confirm {
-	text-align: center;
-	margin-top: 50px;;
-}
-.data{
-	margin: 50px;
-}
-.data2 {
-	margin: 50px;
-}
+
 @import "body";
 @import "card";
 @import "carousel";
 @import "videoyt";
+@import "pedidos";
