--- a/css/estilo.css
+++ b/css/estilo.css
@@ -67,6 +67,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
 }
 
 .videoyt .video {
