--- a/scss/_videoyt.scss
+++ b/scss/_videoyt.scss
@@ -1,6 +1,8 @@
 .videoyt {
 	margin: 10px;
 	align-items: center;
+   
+    text-align: center;
     .video{
         text-align: center;
         iframe{
