--- a/scss/_pedidos.scss
+++ b/scss/_pedidos.scss
@@ -19,7 +19,7 @@
 	margin-bottom: 60px;
 }
 .confirm {
-	text-align: center;
+	text-align: $ac;
 	margin-top: 50px;
     .data{
         margin: 50px;
