--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -10,7 +10,7 @@
         filter: grayscale(0%);
 	}
 	@media screen and (max-width:600px) {
-		align-items: center;
+		align-items: $ac;
 		width:100%;
 		height:auto;
 	}
