--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,7 +1,3 @@
-$cbc: #fff6f6;
-$bg: #d8b0fd;
-$ac: center;
-
 footer {
 	margin: 10px;
 }
@@ -15,7 +11,7 @@ footer {
 	transition: all 0.2s;
 }
 
-
+@import "variables";
 @import "body";
 @import "card";
 @import "carousel";
