--- a/scss/_pedidos.scss
+++ b/scss/_pedidos.scss
@@ -1,36 +1,33 @@
-.info {
+.info{
 	margin-top: 20px;
 	margin-bottom: 50px;
+	text-align: $ac;
 }
-.textop {
+.textop{
 	margin: 50px;
-	text-align: center;
-}
-.ciudad {
-	margin-top: 10px;
+	text-align: $ac;
 }
 .form{
 	margin: 10px;
 	width: 60%;
 	margin-bottom: 50px;
 }
-.ciudad {
+.ciudad{
 	margin-top: 40px;
 	margin-bottom: 60px;
 }
-.confirm {
+.confirm{
 	text-align: $ac;
 	margin-top: 50px;
     .data{
         margin: 50px;
     }
-    .data2 {
+    .data2{
         margin: 50px;
     }
 }
-
-.boton {
-	a {
+.boton{
+	a{
 		color: #ffffff;
 		text-decoration: none;
 	}
