--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -8,7 +8,10 @@
         transform: scale(1.01, 1.01);
         filter: grayscale(0%);
 	}
-	@media screen and (max-width:600px){
+}
+
+@include mobile{
+	.card{
 		align-items: $ac;
 		width:100%;
 		height:auto;
