--- a/scss/_videoyt.scss
+++ b/scss/_videoyt.scss
@@ -1,3 +1,20 @@
-.link{
-    margin: 50px;
+.video{
+    text-align: $ac;
+    width: 560px;
+    height: 350px;
+    margin: 10px;
+	align-items: $ac;
+    &:hover{
+        transform: scale(1.01, 1.01);
+	    transition: all 0.2s;
+    }
+    @include mobile{
+        .video{
+            width: 300px;
+            height: 200px;
+        }
+    }
+}
+.videoyt{
+    text-align: $ac;
 }
