--- a/css/estilo.css
+++ b/css/estilo.css
@@ -34,6 +34,17 @@ body {
           filter: grayscale(0%);
 }
 
+.fotosrecetatexto {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 50px;
+}
+
+.recetatitulo {
+  font-size: larger;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
 @media screen and (max-width: 600px) {
   .card {
     -webkit-box-align: center;
@@ -55,8 +66,32 @@ body {
   size: 50%;
 }
 
-.link {
-  margin: 50px;
+.video {
+  text-align: center;
+  width: 560px;
+  height: 350px;
+  margin: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.video:hover {
+  -webkit-transform: scale(1.01, 1.01);
+          transform: scale(1.01, 1.01);
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+@media screen and (max-width: 600px) {
+  .video .video {
+    width: 300px;
+    height: 200px;
+  }
+}
+
+.videoyt {
+  text-align: center;
 }
 
 .info {
