--- a/css/estilo.css
+++ b/css/estilo.css
@@ -37,6 +37,7 @@ body {
 .fotosrecetatexto {
   font-family: Arial, Helvetica, sans-serif;
   margin: 50px;
+  font-size: x-large;
 }
 
 .recetatitulo {
