--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -12,6 +12,7 @@
 .fotosrecetatexto{
 	font-family:Arial, Helvetica, sans-serif;
 	margin: 50px;
+	font-size: x-large;
 }
 .recetatitulo{
 	font-size: larger;
