--- a/css/estilo.css
+++ b/css/estilo.css
@@ -69,7 +69,7 @@ body {
 
 .video {
   text-align: center;
-  width: 560px;
+  width: 90%;
   height: 350px;
   margin: 10px;
   -webkit-box-align: center;
